feat udistrital/arka_cliente#887: Cierres
- El cálculo del valor a depreciar para cada elemento se hace directamente en el api crud.
