# swagger/swagger.json
@@ -72,7 +72,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.detalle"
+                                "$ref": "#/definitions/models.DepreciacionElemento"
                             }
                         }
                     },
@@ -1487,6 +1487,24 @@
         }
     },
     "definitions": {
+        "models.DepreciacionElemento": {
+            "title": "DepreciacionElemento",
+            "type": "object",
+            "properties": {
+                "DeltaValor": {
+                    "type": "number",
+                    "format": "double"
+                },
+                "ElementoActaId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "ElementoMovimientoId": {
+                    "type": "integer",
+                    "format": "int64"
+                }
+            }
+        },
         "models.ElementosMovimiento": {
             "title": "ElementosMovimiento",
             "type": "object",
@@ -1818,40 +1836,6 @@
                 },
                 "Salida": {
                     "$ref": "#/definitions/models.Movimiento"
-                }
-            }
-        },
-        "models.detalle": {
-            "title": "detalle",
-            "type": "object",
-            "properties": {
-                "ElementoActaId": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "ElementoMovimientoId": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "FechaRef": {
-                    "type": "string",
-                    "format": "datetime"
-                },
-                "NovedadElementoId": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "ValorPresente": {
-                    "type": "number",
-                    "format": "double"
-                },
-                "ValorResidual": {
-                    "type": "number",
-                    "format": "double"
-                },
-                "VidaUtil": {
-                    "type": "number",
-                    "format": "double"
                 }
             }
         }
